# QGC_CICD

./: qgcimages.qrc  qgroundcontrol.pro  qgroundcontrol.qrc
.github/workflows/: android.yml  android_release.yml  linux.yml  linux_release.yml  macos.yml  windows.yml
custom-example/: qgroundcontrol.qrc
resources/InstrumentValueIcons/: InstrumentValueIcons.qrc
src/: CMakeLists.txt
src/AutoPilotPlugins/PX4/: SensorsComponentController.cc  SensorsComponentController.h
src/FirmwarePlugin/: FirmwarePlugin.cc  FirmwarePlugin.h
src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc
src/FlightDisplay/: FlyViewTopRightColumnLayout.qml  GuidedActionsController.qml
src/FlightMap/Widgets/: SiyiCameraRightSideWidget.qml
src/SIYICamera/: CMakeLists.txt  SiyiCameraInterface.cc  SiyiCameraInterface.h
src/SIYICamera/SiyiSDK/: CMakeLists.txt
src/SIYICamera/SiyiSDK/include/: SiyiSDK.h  message.h  sdk.h
src/SIYICamera/SiyiSDK/include/crc/include/: crc.c
src/SIYICamera/SiyiSDK/src/: message.cc  sdk.cc
src/SIYICamera/siyi-sdk/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
src/SIYICamera/siyi-sdk/include/: message.hpp  sdk.hpp  siyi-sdk.h
src/SIYICamera/siyi-sdk/include/crc/: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
src/SIYICamera/siyi-sdk/include/crc/include/: crc.c  crc.h
src/SIYICamera/siyi-sdk/include/crc/src/tests/: CMakeLists.txt
src/SIYICamera/siyi-sdk/include/crc/src/tests/crc16/: table_test.c  test.c
src/SIYICamera/siyi-sdk/include/crc/src/tests/crc32/: table_test.c  test.c
src/SIYICamera/siyi-sdk/include/crc/src/tests/crc8/: table_test.c  test.c
src/SIYICamera/siyi-sdk/src/: message.cpp  sdk.cpp
src/Settings/: CMakeLists.txt  Payload.SettingsGroup.json  PayloadSettings.cc  PayloadSettings.h  SettingsManager.cc  SettingsManager.h
src/UI/: SettingsPagesModel.qml
src/UI/preferences/: PayloadSettings.qml
src/UI/toolbar/: ChcnavAA450Indicator.qml  ChcnavAA450Page.qml  FuelTankIndicator.qml  FuelTankPage.qml  MainStatusIndicator.qml  SiyiCameraIndicator.qml  SiyiCameraPage.qml
src/Vehicle/: CMakeLists.txt  ChcnavAA450FactGroup.json  EfiStatusFactGroup.json  LandingStationFactGroup.json  MultiVehicleManager.cc  MultiVehicleManager.h  Vehicle.cc  Vehicle.h  VehicleChcnavAA450FactGroup.cc  VehicleChcnavAA450FactGroup.h  VehicleEfiStatusFactGroup.cc  VehicleEfiStatusFactGroup.h  VehicleGPS2FactGroup.cc  VehicleGPS2FactGroup.h  VehicleLandingStationFactGroup.cc  VehicleLandingStationFactGroup.h
src/Vehicle/FactGroups/: CMakeLists.txt  ChcnavAA450FactGroup.json  FuelTankFactGroup.json  VehicleChcnavAA450FactGroup.cc  VehicleChcnavAA450FactGroup.h  VehicleFuelTankFactGroup.cc  VehicleFuelTankFactGroup.h
src/ui/: MainRootWindow.qml
src/ui/toolbar/: CMakeLists.txt  (+5 more)
translations/: qgc_source_ru_RU.ts
(+2 files in other folders)
